# ACFramework

./: .gitignore  CMakeLists.txt  README.md  acf.sln
acf_chromium/: acf_chromium.vcxproj  acf_chromium.vcxproj.filters
acfclient/: acfclient.vcxproj  acfclient.vcxproj.filters  client_window.cc  client_window.h  main.cc  message_loop_manager.cc  message_loop_manager.h
acfclient/src/: client_window.cc  client_window.h  main.cc
binding_EPL/: ACF_EPLBinding.e  binding_EPL.vcxproj  binding_EPL.vcxproj.filters
binding_EPL/src/: acf_Class.cc  acf_Class.h  acf_Util.cc  acf_Util.h  acf_ebrowser.cc  acf_ebrowser.h  acf_env.cc  acf_env.h  acf_eprofile.cc  acf_eprofile.h  acf_handler.cc  acf_handler.h  acf_types.h  message_pump.cc  message_pump.h  struct_class.cc  struct_class.h  wrapper_browser.cc  wrapper_callback.cc  wrapper_environment.cc  wrapper_handler_interface.cc  wrapper_handler_interface.h  wrapper_profile.cc  wrapper_types.h  wrapper_utility.cc  wrapper_utility.h  wrapper_values.cc
binding_PY/: CMakeLists.txt  pyproject.toml  setup.py
binding_PY/src/: binding_test.cpp  binding_test.h  main.cpp
binding_PY/tests/: test_basic.py
include/: acf_browser.h  acf_browser_handler.h  acf_callback.h  acf_context_menu.h  acf_environment.h  acf_frame.h  acf_profile.h  acf_values.h
include/capi/: acf_base_capi.h  acf_browser_capi.h  acf_browser_handler_capi.h  acf_callback_capi.h  acf_context_menu_capi.h  acf_environment_capi.h  acf_frame_capi.h  acf_profile_capi.h  acf_values_capi.h
include/internal/: acf_def.h  acf_enums.h  acf_scoped_refptr.h  acf_string.h  acf_string_list.h  acf_string_map.h  acf_string_multimap.h  acf_string_types.h  acf_string_wrappers.h  acf_types.h  acf_types_wrappers.h
lib/: libacf.lib
libacf_dll/: libacf_dll.cc  template_util.h  transfer_util.cc  transfer_util.h  wrapper_types.h
libacf_dll/cpptoc/: binary_value_cpptoc.cc  binary_value_cpptoc.h  browser_cpptoc.cc  browser_cpptoc.h  browser_handler_cpptoc.cc  browser_handler_cpptoc.h  complete_handler_cpptoc.cc  complete_handler_cpptoc.h  complete_value_handler_cpptoc.cc  complete_value_handler_cpptoc.h  context_menu_callback_cpptoc.cc  context_menu_callback_cpptoc.h  context_menu_model_cpptoc.cc  context_menu_model_cpptoc.h  context_menu_params_cpptoc.cc  context_menu_params_cpptoc.h  cookie_cpptoc.cc  cookie_cpptoc.h  cookie_manager_cpptoc.cc  cookie_manager_cpptoc.h  cookie_visitor_cpptoc.cc  cookie_visitor_cpptoc.h  cookies_getter_cpptoc.cc  cookies_getter_cpptoc.h  cpptoc_ref_counted.h  cpptoc_scoped.h  dictionary_value_cpptoc.cc  dictionary_value_cpptoc.h  environment_cpptoc.cc  (+21 more)
(+51 files in other folders)
